[package]
name = "rt_helper"
version = "1.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
cargo_metadata = "0.19"
console = "0.15"
reqwest = { version = "0.12", features = ["json"] }
self_update = { version = "0.42", features = ["rustls"], default-features = false }
serde_json = "1"
winreg = "0.52"
winapi = { version = "0.3", features = ["winnls"] }
