[package]
name = "weLink_msg_style"
version = "1.1.7"
authors = ["yequanrui <yequanrui@qq.com>"]
edition = "2021"
description = "WeLink Msg Style Installer"
documentation = "https://yequanrui.github.io/WeTools/guides/"
homepage = "https://yequanrui.github.io/WeTools/"
repository = "https://github.com/yequanrui/RuTools"
keywords = ["WeLink", "Message", "Style"]
categories = ["command-line-utilities"]

[package.metadata.winres]
OriginalFilename = "weLink_msg_style.exe"
FileDescription = "WeLink Msg Style Installer"
ProductName = "WeLink"
ProductVersion = "7.48.6"
LegalCopyright = "Copyright (c) 2019-2024. Huawei Technologies Co., Ltd. All Rights Reserved."

[dependencies]
console-utils = "1.6"
rt_helper = { path = "../Helper" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
