[package]
name = "welink_msg_style_blue_yinwang"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
authors = ["yequanrui <yequanrui@qq.com>"]
documentation = "https://yequanrui.github.io/WeTools/welink/msg_style"
homepage = "https://yequanrui.github.io/WeTools"
repository = "https://github.com/yequanrui/RuTools"
keywords = { workspace = true }
categories = { workspace = true }
build = "../src/build.rs"

[[bin]]
name = "welink_msg_style_blue_yinwang"
path = "../src/main.rs"

[package.metadata.winres]
OriginalFilename = "welink_msg_style_blue_yinwang.exe"
FileDescription = "WeLink Msg Style Installer"
ProductName = "引望WeLink"
ProductVersion = "7.53.7"
LegalCopyright = "Copyright (c) 2019-2025. Huawei Technologies Co., Ltd. All Rights Reserved."

[dependencies]
clap = { workspace = true }
console-utils = { workspace = true }
rt_helper = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
rt_helper = { path = "../../Helper" }
winres = "0.1"
