[package]
name = "welink_themes"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
authors = ["yequanrui <yequanrui@qq.com>"]
documentation = "https://yequanrui.github.io/WeTools/welink/themes"
homepage = "https://yequanrui.github.io/WeTools"
repository = "https://github.com/yequanrui/RuTools"
keywords = { workspace = true }
categories = { workspace = true }
build = "../src/build.rs"

[[bin]]
name = "welink_themes"
path = "../src/main.rs"

[package.metadata.winres]
OriginalFilename = "welink_themes.exe"
FileDescription = "WeLink Themes Installer"
ProductName = "WeLink_Desktop"
ProductVersion = "7.26.2"
LegalCopyright = "Copyright (c) 2019-2025. Huawei Technologies Co., Ltd. All Rights Reserved."

[dependencies]
console-utils = { workspace = true }
rt_helper = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
rt_helper = { path = "../../Helper" }
winres = "0.1"
